Update website: add npx pawscode@latest tag, add cat paw favicon, remove redundant cards

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Paws - AI-powered terminal assistant for developers. Code faster, debug smarter with 500+ AI models.">
+    <link rel="icon" type="image/png" href="https://static.thenounproject.com/png/cat-paw-icon-1730362-512.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
@@ -1294,6 +1295,7 @@
                 <a href="#use-cases" class="btn btn-secondary">See Use Cases</a>
             </div>
             <div class="hero-tags reveal stagger-3">
+                <span class="hero-tag">npx pawscode@latest</span>
                 <span class="hero-tag">500+ Models</span>
                 <span class="hero-tag">Zero Config</span>
                 <span class="hero-tag">Secure</span>
@@ -1366,28 +1368,10 @@
                     <div class="use-case-example">"Review src/components/UserProfile.js"</div>
                 </article>
                 <article class="use-case-card reveal">
-                    <div class="use-case-icon">📚</div>
-                    <h3 class="use-case-title">Learn Technologies</h3>
-                    <p class="use-case-desc">Get tailored tutorials for integrating new technologies into your specific project.</p>
-                    <div class="use-case-example">"Integrate GraphQL into this Express app"</div>
-                </article>
-                <article class="use-case-card reveal">
-                    <div class="use-case-icon">🗄️</div>
-                    <h3 class="use-case-title">Database Design</h3>
-                    <p class="use-case-desc">Design schemas, tables, relationships, indexes, and constraints for your project.</p>
-                    <div class="use-case-example">"Design a blog schema with users, posts, comments"</div>
-                </article>
-                <article class="use-case-card reveal">
                     <div class="use-case-icon">🔧</div>
                     <h3 class="use-case-title">Refactor Code</h3>
                     <p class="use-case-desc">Modernize legacy code with step-by-step refactoring guidance and implementation.</p>
                     <div class="use-case-example">"Refactor this class component to React Hooks"</div>
-                </article>
-                <article class="use-case-card reveal">
-                    <div class="use-case-icon">🌿</div>
-                    <h3 class="use-case-title">Git Operations</h3>
-                    <p class="use-case-desc">Get help with git conflicts, merging, branching, and understanding differences.</p>
-                    <div class="use-case-example">"Resolve merge conflicts in feature/user-profile"</div>
                 </article>
             </div>
         </div>
@@ -1407,11 +1391,6 @@
                     <p class="feature-desc">Real-time token streaming for instant feedback and smoother interactions</p>
                 </div>
                 <div class="feature-card reveal">
-                    <div class="feature-icon">🔄</div>
-                    <h3 class="feature-name">Persistent Spinner</h3>
-                    <p class="feature-desc">Always know what's happening with a responsive status indicator</p>
-                </div>
-                <div class="feature-card reveal">
                     <div class="feature-icon">🧠</div>
                     <h3 class="feature-name">Smart Thinking Buffer</h3>
                     <p class="feature-desc">Shows reasoning only when needed, in a finite preview window</p>
@@ -1422,19 +1401,9 @@
                     <p class="feature-desc">UI optimized to show more information without clutter</p>
                 </div>
                 <div class="feature-card reveal">
-                    <div class="feature-icon">🗑️</div>
-                    <h3 class="feature-name">Auto-Erase Summary</h3>
-                    <p class="feature-desc">Summary automatically clears after next prompt to keep context fresh</p>
-                </div>
-                <div class="feature-card reveal">
                     <div class="feature-icon">💬</div>
                     <h3 class="feature-name">Full History Access</h3>
                     <p class="feature-desc">Switch conversations and see complete history instantly</p>
-                </div>
-                <div class="feature-card reveal">
-                    <div class="feature-icon">🖥️</div>
-                    <h3 class="feature-name">Adaptive Display</h3>
-                    <p class="feature-desc">Full screen refresh on resize for optimal viewing</p>
                 </div>
                 <div class="feature-card reveal">
                     <div class="feature-icon">⚙️</div>
@@ -1455,11 +1424,6 @@
                     <div class="feature-icon">🤖</div>
                     <h3 class="feature-name">Custom Agents</h3>
                     <p class="feature-desc">Create and use custom AI agents for specialized tasks</p>
-                </div>
-                <div class="feature-card reveal">
-                    <div class="feature-icon">🔑</div>
-                    <h3 class="feature-name">Interactive Provider Login</h3>
-                    <p class="feature-desc">Easy credential management with <code>paws provider login</code></p>
                 </div>
             </div>
         </div>
