--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Paws - AI-powered terminal assistant for developers. Code faster, debug smarter with 500+ AI models.">
-    <link rel="icon" type="image/png" href="https://static.thenounproject.com/png/cat-paw-icon-1730362-512.png">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath fill='%23ffffff' d='M256 64c-35.3 0-64 28.7-64 64s28.7 64 64 64 64-28.7 64-64-28.7-64-64-64zm-128 96c-35.3 0-64 28.7-64 64s28.7 64 64 64 64-28.7 64-64-28.7-64-64-64zm256 0c-35.3 0-64 28.7-64 64s28.7 64 64 64 64-28.7 64-64-28.7-64-64-64zM128 320c-35.3 0-64 28.7-64 64s28.7 64 64 64 64-28.7 64-64-28.7-64-64-64zm256 0c-35.3 0-64 28.7-64 64s28.7 64 64 64 64-28.7 64-64-28.7-64-64-64zm-128 96c-44.2 0-80 35.8-80 80v16c0 17.7 14.3 32 32 32h96c17.7 0 32-14.3 32-32v-16c0-44.2-35.8-80-80-80z'/%3E%3C/svg%3E">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
@@ -405,6 +405,34 @@
              border-radius: 50%;
              background: var(--accent);
              opacity: 0.7;
+        }
+
+        .hero-install {
+            background: rgba(99, 102, 241, 0.08);
+            border: 1px solid rgba(99, 102, 241, 0.25);
+            border-radius: var(--radius-md);
+            padding: 1.5rem 2rem;
+            margin-bottom: 2rem;
+            text-align: center;
+            backdrop-filter: blur(10px);
+            box-shadow: 0 8px 20px rgba(99, 102, 241, 0.1);
+        }
+
+        .install-label {
+            font-size: 0.875rem;
+            color: var(--accent);
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.08em;
+            margin-bottom: 0.75rem;
+        }
+
+        .install-command {
+            font-family: 'JetBrains Mono', 'Monaco', 'Menlo', 'Consolas', monospace;
+            font-size: 1.5rem;
+            font-weight: 600;
+            color: #ffffff;
+            letter-spacing: -0.01em;
         }
 
         .hero-terminal {
@@ -1294,8 +1322,11 @@
                 </a>
                 <a href="#use-cases" class="btn btn-secondary">See Use Cases</a>
             </div>
+            <div class="hero-install reveal stagger-2">
+                <div class="install-label">Quick Install</div>
+                <div class="install-command">npx pawscode@latest</div>
+            </div>
             <div class="hero-tags reveal stagger-3">
-                <span class="hero-tag">npx pawscode@latest</span>
                 <span class="hero-tag">500+ Models</span>
                 <span class="hero-tag">Zero Config</span>
                 <span class="hero-tag">Secure</span>
