--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/assets/asciinema-player.css" />
     <title>Paws - AI Terminal Assistant for Developers</title>
     <style>
         * {
@@ -528,71 +529,18 @@
             display: block;
             color: white;
         }
-
-        .hero-terminal {
-            background: #09090b;
-            border: 1px solid rgba(255, 255, 255, 0.08);
-            border-radius: var(--radius-lg);
-            overflow: hidden;
-            box-shadow:
-                0 0 0 1px rgba(0,0,0,0.4),
-                0 30px 60px -12px rgba(0, 0, 0, 0.6),
-                0 0 120px -20px rgba(14, 165, 233, 0.15);
-            position: relative;
+        .ap-term {
+            border: none !important;
         }
 
-        .terminal-header {
-            background: rgba(255, 255, 255, 0.03);
-            padding: 1.25rem 1.5rem;
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+        #asciinema-player .ap-player {
+            background-color: transparent !important;
         }
 
-        .terminal-dots {
-            display: flex;
-            gap: 0.6rem;
-            flex-shrink: 0;
-        }
-
-        .terminal-dot {
-            width: 12px;
-            height: 12px;
-            border-radius: 50%;
-            position: relative;
-        }
-
-        .terminal-title {
-            margin-left: 0.5rem;
-            font-size: 0.9rem;
-            color: var(--text-secondary);
-            font-family: 'Inter', sans-serif;
-            font-weight: 500;
-            opacity: 0.6;
-        }
-
-        .terminal-body {
-            padding: 2rem 2rem;
-            font-family: 'JetBrains Mono', 'Monaco', 'Menlo', 'Consolas', monospace;
-            font-size: 1rem;
-            line-height: 1.8;
-            overflow-x: auto;
-            color: #e2e8f0;
-            min-height: 300px;
-        }
-
-        .terminal-line {
-            margin-bottom: 0.75rem;
-            word-break: break-all;
-            display: flex;
-            gap: 0.75rem;
-        }
-
-        .terminal-prompt {
-            color: var(--accent);
-            font-weight: 700;
-            user-select: none;
+        #asciinema-player {
+            background: #0000006e !important;
+            padding: 10px !important;
+            border-radius: 10px;
         }
 
         /* Sections */
@@ -1624,36 +1572,7 @@
                 <span class="hero-tag">Open Source</span>
             </div>
         </div>
-        <div class="hero-terminal reveal-scale parallax-section" data-speed="0.1">
-                <div class="terminal-header">
-                    <div class="terminal-dots">
-                        <div class="terminal-dot red"></div>
-                        <div class="terminal-dot yellow"></div>
-                        <div class="terminal-dot green"></div>
-                    </div>
-                    <span class="terminal-title">~/project</span>
-                </div>
-                <div class="terminal-body">
-                    <div class="terminal-line">
-                        <span class="terminal-prompt">$</span> <span class="terminal-command">paws</span>
-                    </div>
-                    <div class="terminal-line">
-                        <span class="terminal-output">&gt; Can you explain how to authentication system works?</span>
-                    </div>
-                    <div class="terminal-line">
-                        <span class="terminal-output">Analyzing project structure...</span>
-                    </div>
-                    <div class="terminal-line">
-                        <span class="terminal-output">Found auth-related files: src/auth/*, middleware/auth.ts</span>
-                    </div>
-                    <div class="terminal-line">
-                        <span class="terminal-success">✓ Analysis complete. The auth system uses JWT tokens with refresh rotation...</span>
-                    </div>
-                    <div class="terminal-line">
-                        <span class="terminal-prompt">$</span> <span class="terminal-command">paws -p "Add error handling to this function"</span>
-                    </div>
-                </div>
-            </div>
+        <div class="hero-terminal reveal-scale parallax-section" id="asciinema-player" data-speed="0.1">
         </div>
     </section>
 
@@ -2200,6 +2119,13 @@ $ antigravity proxy stop</pre>
             } catch (err) {
                 console.error('Failed to copy!', err);
             }
+        });
+    </script>
+    <script src="/assets/asciinema-player.min.js"></script>
+    <script>
+        AsciinemaPlayer.create('/assets/766613.cast', document.getElementById('asciinema-player'), {
+            autoPlay: true,
+            loop: true,
         });
     </script>
 </body>
