--- a/index.html
+++ b/index.html
@@ -1479,6 +1479,69 @@
             margin-top: 0.25rem;
         }
 
+        /* Hand-drawn strikethrough effect */
+        .hand-drawn-cross {
+            position: relative;
+            display: inline-block;
+        }
+
+        .hand-drawn-cross::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 50%;
+            width: 100%;
+            height: 6px;
+            background: #f97316;
+            border-radius: 4px;
+            pointer-events: none;
+            /* Hand-drawn effect with rotation */
+            transform: rotate(-3deg) translateY(-50%);
+            box-shadow: 
+                0 2px 4px rgba(0,0,0,0.4),
+                inset 0 1px 0 rgba(255,255,255,0.3);
+            animation: handDraw 0.4s ease-out forwards;
+        }
+
+        /* Add wobble line for hand-drawn effect */
+        .hand-drawn-cross::after {
+            content: '';
+            position: absolute;
+            left: 3%;
+            top: 48%;
+            width: 94%;
+            height: 5px;
+            background: transparent;
+            border: 3px solid #fb923c;
+            border-radius: 60% 40% 50% 45% / 45% 55% 40% 60%;
+            transform: rotate(2deg) translateY(-50%) scaleX(0);
+            animation: handDrawLine 0.5s ease-out forwards;
+            pointer-events: none;
+            opacity: 0.7;
+        }
+
+        @keyframes handDraw {
+            0% {
+                transform: rotate(-3deg) translateY(-50%) scaleX(0);
+                opacity: 0;
+            }
+            100% {
+                transform: rotate(-3deg) translateY(-50%) scaleX(1);
+                opacity: 1;
+            }
+        }
+
+        @keyframes handDrawLine {
+            0% {
+                transform: rotate(2deg) translateY(-50%) scaleX(0);
+                opacity: 0;
+            }
+            100% {
+                transform: rotate(2deg) translateY(-50%) scaleX(1);
+                opacity: 0.7;
+            }
+        }
+
         @media (max-width: 768px) {
             .stats-banner {
                 padding: 4rem 1.5rem;
@@ -1549,7 +1612,7 @@
 
     <section class="hero" id="hero">
         <div class="hero-content">
-            <h1 class="reveal parallax-section" data-speed="0.05">AI-Powered Terminal Assistant</h1>
+            <h1 class="reveal parallax-section" data-speed="0.05">AI-Powered <span class="hand-drawn-cross">Terminal</span> Assistant</h1>
             <p class="reveal stagger-1 parallax-section" data-speed="0.03">Code faster, debug smarter, and refactor effortlessly. Paws understands your entire codebase and helps you work without leaving your terminal.</p>
             <div class="hero-actions reveal stagger-2">
                 <a href="https://github.com/manthanabc/paws" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
