--- a/index.html
+++ b/index.html
@@ -455,7 +455,6 @@
 
         .btn-primary:hover {
             background: var(--accent-hover);
-            transform: translateY(-2px);
             box-shadow: 0 20px 40px -10px var(--accent-glow);
         }
 
@@ -475,7 +474,6 @@
         }
 
         .hero-tag:hover {
-            transform: translateY(-3px);
             background: white;
         }
 
@@ -500,7 +498,6 @@
         .btn-install:hover {
             background: #fff0f5;
             border-color: var(--accent);
-            transform: translateY(-2px);
             box-shadow: 0 20px 40px -10px rgba(236, 72, 153, 0.2);
             animation: jelly 0.5s ease;
         }
@@ -566,10 +563,9 @@
         }
 
         .use-case-card:hover {
-            transform: translateY(-8px) scale(1.02);
             box-shadow: 0 24px 48px -12px rgba(236, 72, 153, 0.2);
             background: rgba(255, 255, 255, 0.7);
-            border-color: rgba(236, 72, 153, 0.2);
+            border-color: rgba(236, 72, 153, 0.3);
         }
 
         .use-case-icon {
@@ -584,12 +580,12 @@
             margin-bottom: 2rem;
             color: var(--text-primary);
             box-shadow: 0 10px 20px -5px rgba(236, 72, 153, 0.15);
-            transition: transform 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
+            transition: all 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
         }
         
         .use-case-card:hover .use-case-icon {
-            transform: scale(1.1) rotate(5deg);
             animation: jelly 0.6s ease;
+            box-shadow: 0 15px 30px -5px rgba(236, 72, 153, 0.2);
         }
 
         .use-case-title {
@@ -647,9 +643,8 @@
 
         .feature-card:hover {
             background: rgba(255, 255, 255, 0.8);
-            transform: translateY(-5px);
             box-shadow: 0 20px 40px -10px rgba(236, 72, 153, 0.15);
-            border-color: rgba(236, 72, 153, 0.2);
+            border-color: rgba(236, 72, 153, 0.3);
         }
 
         .feature-icon {
@@ -670,7 +665,6 @@
         .feature-card:hover .feature-icon {
             background: var(--accent);
             color: white;
-            transform: scale(1.1);
             box-shadow: 0 15px 30px -5px var(--accent-glow);
             animation: jelly 0.6s ease;
         }
@@ -774,7 +768,6 @@
         .provider-badge:hover {
             color: var(--text-primary);
             background: white;
-            transform: translateY(-3px) scale(1.05);
             box-shadow: 0 15px 30px -5px rgba(236, 72, 153, 0.15);
             border-color: rgba(236, 72, 153, 0.2);
             animation: jelly 0.5s ease;
@@ -918,6 +911,7 @@
             box-shadow: 
                 0 30px 60px -12px rgba(236, 72, 153, 0.15),
                 0 0 0 1px rgba(236, 72, 153, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.5);
         }
 
         .mcp-code-block h4 {
@@ -1393,20 +1387,20 @@
         }
 
         .stat-item:hover {
-            transform: translateY(-5px);
             box-shadow: 0 15px 30px -10px rgba(236, 72, 153, 0.15);
             background: rgba(255, 255, 255, 0.8);
+            border-color: rgba(236, 72, 153, 0.2);
         }
 
         .stat-icon {
             font-size: 2.5rem;
             line-height: 1;
             flex-shrink: 0;
-            transition: transform 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
+            transition: all 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
         }
         
         .stat-item:hover .stat-icon {
-            transform: scale(1.2) rotate(10deg);
+            animation: jelly 0.6s ease;
         }
 
         .stat-content {
