--- a/index.html
+++ b/index.html
@@ -391,33 +391,46 @@
 
         /* Hero */
         .hero {
-            padding: calc(var(--header-height) + 6rem) 2rem 10rem;
+            padding: calc(var(--header-height) + 8rem) 2rem 12rem;
             max-width: var(--container-width);
             margin: 0 auto;
             display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 6rem;
+            grid-template-columns: 1.2fr 1fr;
+            gap: 4rem;
             align-items: center;
+            position: relative;
+        }
+
+        .hero::before {
+            content: '';
+            position: absolute;
+            top: -20%;
+            left: -10%;
+            width: 800px;
+            height: 800px;
+            background: radial-gradient(circle, rgba(236, 72, 153, 0.15) 0%, transparent 70%);
+            border-radius: 50%;
+            filter: blur(60px);
+            z-index: -1;
+            pointer-events: none;
         }
 
         .hero-content h1 {
-            font-size: clamp(3.5rem, 5vw, 5rem);
+            font-size: clamp(4rem, 6vw, 5.5rem);
             font-weight: 800;
-            line-height: 1.05;
-            margin-bottom: 2rem;
+            line-height: 1.1;
+            margin-bottom: 2.5rem;
             letter-spacing: -0.04em;
-            background: linear-gradient(180deg, #be185d 0%, #db2777 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            color: var(--text-primary);
         }
 
         .hero-content p {
-            font-size: clamp(1.2rem, 2vw, 1.35rem);
+            font-size: clamp(1.25rem, 2vw, 1.5rem);
             color: var(--text-secondary);
-            margin-bottom: 3rem;
-            max-width: 580px;
-            line-height: 1.7;
+            margin-bottom: 3.5rem;
+            max-width: 600px;
+            line-height: 1.6;
+            font-weight: 400;
         }
 
         .hero-actions {
@@ -501,6 +514,19 @@
             box-shadow: 0 20px 40px -10px rgba(236, 72, 153, 0.2);
             animation: jelly 0.5s ease;
         }
+        .btn-install.copied {
+            border-color: var(--success);
+            background: rgba(16, 185, 129, 0.1);
+        }
+
+        .btn-install.copied .copy-icon {
+            display: none;
+        }
+
+        .btn-install.copied .copied-icon {
+            display: block !important;
+            color: var(--success);
+        }
 
         .section-badge {
             display: inline-flex;
@@ -536,7 +562,12 @@
             font-weight: 400;
         }
 
-        /* Use Cases */
+        /* Layout Utility */
+        .section-container {
+            max-width: var(--container-width);
+            margin: 0 auto;
+            width: 100%;
+        }        /* Use Cases */
         .use-cases {
             background: transparent;
         }
@@ -548,7 +579,7 @@
         }
 
         .use-case-card {
-            background: rgba(255, 255, 255, 0.4);
+            background: rgba(255, 255, 255, 0.7);
             border-radius: var(--radius-lg);
             padding: 3rem;
             transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
@@ -558,8 +589,22 @@
             height: 100%;
             display: flex;
             flex-direction: column;
-            box-shadow: 0 10px 30px -10px rgba(236, 72, 153, 0.05);
-            border: 1px solid rgba(255, 255, 255, 0.5);
+            box-shadow: 
+                0 10px 30px -10px rgba(236, 72, 153, 0.05),
+                0 1px 2px rgba(0,0,0,0.05);
+            border: 1px solid rgba(255, 255, 255, 0.8);
+            border-top: 4px solid var(--accent);
+        }
+
+        .use-case-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 80px;
+            height: 80px;
+            background: linear-gradient(135deg, transparent 50%, rgba(236, 72, 153, 0.05) 50%);
+            pointer-events: none;
         }
 
         .use-case-card:hover {
@@ -630,15 +675,33 @@
         }
 
         .feature-card {
-            background: rgba(255, 255, 255, 0.4);
+            background: linear-gradient(145deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.3));
             border-radius: var(--radius-lg);
             padding: 2.5rem;
             transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
             height: 100%;
             position: relative;
             overflow: hidden;
-            box-shadow: 0 10px 30px -5px rgba(236, 72, 153, 0.05);
-            border: 1px solid rgba(255, 255, 255, 0.5);
+            box-shadow: 
+                0 10px 30px -10px rgba(236, 72, 153, 0.05),
+                inset 0 0 20px rgba(255, 255, 255, 0.5);
+            border: 1px solid rgba(255, 255, 255, 0.6);
+        }
+
+        .feature-card::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 4px;
+            background: linear-gradient(90deg, var(--accent), var(--warning), var(--success));
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        .feature-card:hover::after {
+            opacity: 1;
         }
 
         .feature-card:hover {
@@ -676,13 +739,13 @@
         }
 
         .cli-table-container {
-            background: rgba(255, 255, 255, 0.4);
+            background: #1e1e1e; /* Dark terminal background */
             border-radius: var(--radius-lg);
             overflow: hidden;
             overflow-x: auto;
-            box-shadow: 0 20px 60px -15px rgba(236, 72, 153, 0.1);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.5);
+            box-shadow: 0 20px 60px -15px rgba(0, 0, 0, 0.3);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            color: #d4d4d4; /* Light text for dark mode */
         }
 
         .cli-table {
@@ -691,36 +754,30 @@
             min-width: 700px;
         }
 
-        .cli-table th,
-        .cli-table td {
-            padding: 1.75rem 2.5rem;
-            text-align: left;
-            border-bottom: 1px solid rgba(236, 72, 153, 0.05);
-        }
-
         .cli-table th {
-            background: rgba(255, 255, 255, 0.3);
-            font-weight: 700;
-            color: var(--text-primary);
-            font-size: 0.9rem;
+            background: #252526;
+            color: #9cdcfe;
+            font-weight: 600;
             text-transform: uppercase;
             letter-spacing: 0.05em;
+            padding: 1.25rem 2.5rem;
+            border-bottom: 1px solid #333;
         }
 
-        .cli-table tr:last-child td {
-            border-bottom: none;
+        .cli-table td {
+            padding: 1.25rem 2.5rem;
+            border-bottom: 1px solid #333;
+            color: #cccccc;
         }
 
         .cli-table tr:hover td {
-            background: rgba(255, 255, 255, 0.4);
+            background: #2a2d2e;
         }
-
 
         .cli-option {
             font-family: 'JetBrains Mono', 'Monaco', 'Menlo', 'Consolas', monospace;
-            color: var(--accent);
+            color: #ce9178; /* Orange-ish for options */
             font-size: 0.95rem;
-            font-weight: 600;
         }
 
         /* Providers */
@@ -743,34 +800,46 @@
         .providers-grid {
             display: flex;
             flex-wrap: wrap;
-            gap: 1.25rem;
-            margin-top: 4rem;
+            gap: 1.5rem;
+            margin-top: 5rem;
             justify-content: center;
-            max-width: 1100px;
+            max-width: 1000px;
             margin-left: auto;
             margin-right: auto;
         }
 
         .provider-badge {
-            background: rgba(255, 255, 255, 0.5);
-            padding: 0.85rem 1.75rem;
+            background: rgba(255, 255, 255, 0.4);
+            padding: 0.75rem 1.5rem;
             border-radius: 100px;
-            font-size: 1rem;
+            font-size: 1.1rem;
             color: var(--text-secondary);
             font-weight: 500;
-            transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+            transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
             cursor: default;
             backdrop-filter: blur(5px);
-            box-shadow: 0 4px 10px rgba(236, 72, 153, 0.05);
-            border: 1px solid rgba(255, 255, 255, 0.5);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+        }
+
+        .provider-badge:nth-child(3n) {
+            font-size: 1.2rem;
+            background: rgba(255, 255, 255, 0.6);
+            color: var(--text-primary);
+            border-color: rgba(236, 72, 153, 0.2);
+        }
+
+        .provider-badge:nth-child(2n) {
+            opacity: 0.8;
         }
 
         .provider-badge:hover {
-            color: var(--text-primary);
+            transform: translateY(-5px) scale(1.05);
             background: white;
-            box-shadow: 0 15px 30px -5px rgba(236, 72, 153, 0.15);
-            border-color: rgba(236, 72, 153, 0.2);
-            animation: jelly 0.5s ease;
+            color: var(--accent);
+            box-shadow: 0 10px 25px -5px rgba(236, 72, 153, 0.2);
+            border-color: var(--accent);
+            z-index: 10;
+            opacity: 1;
         }
 
         /* Configuration */
@@ -786,50 +855,46 @@
         }
 
         .config-block {
-            background: rgba(255, 255, 255, 0.4);
+            background: white;
             border-radius: var(--radius-lg);
-            padding: 3rem;
+            padding: 2.5rem;
             transition: all 0.3s ease;
-            backdrop-filter: blur(10px);
-            box-shadow: 0 10px 30px -5px rgba(236, 72, 153, 0.05);
-            border: 1px solid rgba(255, 255, 255, 0.5);
+            box-shadow: 
+                0 4px 6px -1px rgba(0, 0, 0, 0.05), 
+                0 2px 4px -1px rgba(0, 0, 0, 0.03);
+            border: 1px solid rgba(236, 72, 153, 0.1);
         }
 
         .config-block:hover {
-            transform: translateY(-6px);
-            background: rgba(255, 255, 255, 0.8);
-            box-shadow: 0 20px 40px -10px rgba(236, 72, 153, 0.15);
-            border-color: rgba(236, 72, 153, 0.2);
+            transform: translateY(-5px);
+            box-shadow: 
+                0 20px 25px -5px rgba(0, 0, 0, 0.05), 
+                0 10px 10px -5px rgba(0, 0, 0, 0.01);
+            border-color: rgba(236, 72, 153, 0.3);
         }
 
         .config-title {
-            font-size: 1.25rem;
+            font-size: 1.1rem;
             font-weight: 700;
-            margin-bottom: 1.5rem;
+            margin-bottom: 1.25rem;
             color: var(--text-primary);
             display: flex;
             align-items: center;
-            gap: 1rem;
-        }
-
-        .config-title svg {
-            color: var(--accent);
-            width: 24px;
-            height: 24px;
-            filter: drop-shadow(0 2px 4px rgba(236, 72, 153, 0.2));
+            gap: 0.75rem;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
         }
 
         .config-content {
             font-family: 'JetBrains Mono', 'Monaco', 'Menlo', 'Consolas', monospace;
-            font-size: 0.9rem;
-            background: rgba(255, 255, 255, 0.5);
+            font-size: 0.85rem;
+            background: #f8fafc;
             padding: 1.5rem;
-            border-radius: var(--radius-md);
-            color: var(--text-secondary);
+            border-radius: var(--radius-sm);
+            color: #334155;
             overflow-x: auto;
-            border: 1px solid rgba(255, 255, 255, 0.5);
-            line-height: 1.7;
-            box-shadow: inset 0 2px 4px rgba(236, 72, 153, 0.02);
+            border: 1px solid #e2e8f0;
+            line-height: 1.6;
         }
 
         .config-content code {
@@ -838,6 +903,82 @@
 
 
         /* MCP */
+        /* Antigravity Section */
+        .antigravity-section {
+            background: linear-gradient(180deg, #2e1065 0%, #0f172a 100%);
+            padding: 10rem 2rem;
+            color: white;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .antigravity-section::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: 
+                radial-gradient(circle at 20% 30%, rgba(139, 92, 246, 0.15) 0%, transparent 50%),
+                radial-gradient(circle at 80% 70%, rgba(236, 72, 153, 0.15) 0%, transparent 50%);
+            pointer-events: none;
+        }
+
+        .antigravity-section .section-title {
+            color: white;
+        }
+
+        .antigravity-section .section-subtitle {
+            color: rgba(255, 255, 255, 0.7);
+        }
+
+        .antigravity-section .mcp-text p {
+            color: rgba(255, 255, 255, 0.8);
+        }
+
+        .antigravity-section .mcp-text h3 {
+            color: white;
+        }
+
+        .antigravity-section .mcp-command {
+            background: rgba(255, 255, 255, 0.1);
+            color: #e2e8f0;
+            border-color: rgba(255, 255, 255, 0.1);
+        }
+
+        .antigravity-section .mcp-command:hover {
+            background: rgba(255, 255, 255, 0.2);
+        }
+
+        .antigravity-section .mcp-code-block {
+            background: #1e293b; /* Dark slate */
+            border-color: rgba(255, 255, 255, 0.1);
+            box-shadow: 0 20px 40px -10px rgba(0, 0, 0, 0.5);
+        }
+
+        .antigravity-section .mcp-code-block pre {
+            color: #e2e8f0;
+        }
+        
+        .antigravity-section .mcp-code-block h4 {
+            color: #94a3b8;
+        }
+
+        /* Floating particles for antigravity */
+        .particle {
+            position: absolute;
+            background: white;
+            border-radius: 50%;
+            opacity: 0.3;
+            animation: rise 10s infinite linear;
+        }
+        
+        @keyframes rise {
+            0% { transform: translateY(100vh) scale(0); opacity: 0; }
+            50% { opacity: 0.5; }
+            100% { transform: translateY(-10vh) scale(1); opacity: 0; }
+        }
         .mcp-section {
             background: var(--bg-secondary);
             padding: 10rem 2rem;
@@ -955,9 +1096,24 @@
         /* Footer */
         footer {
             padding: 8rem 2rem 4rem;
-            background: var(--bg-primary);
-            border-top: 1px solid rgba(236, 72, 153, 0.05);
+            background: linear-gradient(180deg, var(--bg-primary) 0%, #fff0f5 100%);
+            border-top: none;
             position: relative;
+            margin-top: 4rem;
+        }
+
+        footer::before {
+            content: '';
+            position: absolute;
+            top: -50px;
+            left: 0;
+            width: 100%;
+            height: 100px;
+            background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1440 320'%3E%3Cpath fill='%23fff0f5' fill-opacity='1' d='M0,96L48,112C96,128,192,160,288,160C384,160,480,128,576,112C672,96,768,96,864,112C960,128,1056,160,1152,165.3C1248,171,1344,149,1392,138.7L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z'%3E%3C/path%3E%3C/svg%3E");
+            background-size: cover;
+            background-repeat: no-repeat;
+            pointer-events: none;
+            z-index: 1;
         }
 
         .footer-content {
@@ -1924,7 +2080,12 @@ FORGE_SHOW_TASK_STATS=true</code></pre>
         </div>
     </section>
 
-    <section class="config-section" id="antigravity">
+    <section class="antigravity-section" id="antigravity">
+        <div class="particle" style="left: 10%; width: 4px; height: 4px; animation-duration: 7s;"></div>
+        <div class="particle" style="left: 30%; width: 6px; height: 6px; animation-duration: 12s;"></div>
+        <div class="particle" style="left: 50%; width: 3px; height: 3px; animation-duration: 15s;"></div>
+        <div class="particle" style="left: 70%; width: 5px; height: 5px; animation-duration: 9s;"></div>
+        <div class="particle" style="left: 90%; width: 4px; height: 4px; animation-duration: 11s;"></div>
         <div class="section-container">
             <div class="section-header reveal">
                 <span class="section-badge">Antigravity Proxy</span>
